...
  final List<String> _devices = const [
    'iPhone 14 Pro',
    'iPhone 14',
    'Samsung Galaxy S23 Ultra',
    'Samsung Galaxy S23',
    'Google Pixel 7 Pro',
    'Google Pixel 7',
    'Other'
  ];

  Future<void> _onContinue(BuildContext context, WidgetRef ref) async {
    final selectedDevice = ref.read(selectedDeviceProvider);
    if (selectedDevice != null) {
...
